--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3436,10 +3436,42 @@ button:focus:not(:focus-visible) {
   display: none;
 }
 
+.register-list {
+  position: relative;
+}
 .register-list img {
   width: 100%;
   object-fit: cover;
   margin-bottom: 35px;
+}
+@media (max-width: 575px) {
+  .register-list img {
+    margin-bottom: 10px;
+  }
+}
+.register-list h1 {
+  position: absolute;
+  top: 30%;
+  left: 16%;
+  font-size: 50px;
+  font-weight: 600;
+  line-height: 68px;
+  color: #ffffff;
+  letter-spacing: 3px;
+}
+@media (max-width: 768px) {
+  .register-list h1 {
+    top: 22%;
+    left: 16%;
+    font-size: 37px;
+  }
+}
+@media (max-width: 575px) {
+  .register-list h1 {
+    top: 14%;
+    left: 16%;
+    font-size: 26px;
+  }
 }
 
 .register-list-form {
@@ -3455,6 +3487,7 @@ button:focus:not(:focus-visible) {
   margin: 0 100px 0 160px;
   padding: 14px 20px;
   border-radius: 10px;
+  transition: border-radius 0.5s ease;
 }
 @media (max-width: 1440px) {
   .register-list-form .form-list {
@@ -3474,6 +3507,12 @@ button:focus:not(:focus-visible) {
 .register-list-form .form-list .form-list-data input {
   padding-top: 11px;
   padding-bottom: 12px !important;
+}
+@media (max-width: 575px) {
+  .register-list-form .form-list .form-list-data input {
+    padding-top: 9px;
+    padding-bottom: 9px !important;
+  }
 }
 .register-list-form .form-list .form-list-data input:focus {
   outline: none;
@@ -4056,7 +4095,7 @@ button:focus:not(:focus-visible) {
 }
 
 .mobile-show-btn {
-  margin-top: 19px;
+  margin-top: 9px;
 }
 
 .owl-theme .owl-dots .owl-dot span {
@@ -4067,8 +4106,24 @@ button:focus:not(:focus-visible) {
   display: none;
 }
 
+.custm-col12 {
+  position: absolute;
+  z-index: 99999;
+  top: 98%;
+  left: 0;
+  background: #F6774E;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding-bottom: 30px;
+}
+
 .form-data {
   margin-bottom: 20px;
+}
+
+.form-list.expanded {
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
