--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,6 +406,59 @@ header .header-data .header-right h4::before {
   }
 }
 
+@media (max-width: 768px) {
+  .rightside-title.quotation-title {
+    flex-direction: column;
+  }
+}
+@media (max-width: 575px) {
+  .rightside-title {
+    display: flex;
+  }
+}
+.rightside-title h2 {
+  font-size: 30px;
+  line-height: 40px;
+  font-weight: 600;
+  color: #444444;
+  position: relative;
+  padding-left: 20px;
+  margin-bottom: 13px;
+}
+@media (max-width: 992px) {
+  .rightside-title h2 {
+    font-size: 24px;
+    line-height: 28px;
+  }
+}
+@media (max-width: 768px) {
+  .rightside-title h2 {
+    font-size: 24px;
+  }
+}
+@media (max-width: 575px) {
+  .rightside-title h2 {
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 34px;
+  }
+}
+.rightside-title h2::after {
+  position: absolute;
+  top: 7px;
+  left: 0;
+  background-color: #31b762;
+  content: "";
+  width: 12px;
+  height: 25px;
+}
+@media (max-width: 768px) {
+  .rightside-title h2::after {
+    top: 4px;
+    height: 17px;
+  }
+}
+
 .right-sidebar {
   width: 82.4%;
 }
@@ -3440,13 +3493,21 @@ button:focus:not(:focus-visible) {
   position: relative;
 }
 .register-list img {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 50% 75%, 47% 84%, 44% 75%, 0% 75%);
   width: 100%;
+  height: 100%;
+  max-height: 550px;
   object-fit: cover;
-  margin-bottom: 35px;
+}
+@media (max-width: 768px) {
+  .register-list img {
+    clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 52% 75%, 47% 86%, 42% 75%, 0% 75%);
+  }
 }
 @media (max-width: 575px) {
   .register-list img {
-    margin-bottom: 10px;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 55% 75%, 48% 87%, 42% 75%, 0% 75%);
+    min-height: 186px;
   }
 }
 .register-list h1 {
@@ -3491,7 +3552,7 @@ button:focus:not(:focus-visible) {
 }
 @media (max-width: 1440px) {
   .register-list-form .form-list {
-    margin: 0 19px 0 66px;
+    margin: 0 19px 0 81px;
   }
 }
 @media (max-width: 768px) {
@@ -3505,8 +3566,9 @@ button:focus:not(:focus-visible) {
   }
 }
 .register-list-form .form-list .form-list-data input {
-  padding-top: 11px;
+  padding-top: 13px;
   padding-bottom: 12px !important;
+  color: #9A9A9A;
 }
 @media (max-width: 575px) {
   .register-list-form .form-list .form-list-data input {
@@ -3605,7 +3667,7 @@ button:focus:not(:focus-visible) {
 }
 .register-list-form .form-list .form-list-data .btn1 {
   color: #ffffff;
-  border: 2px solid #ffffff;
+  border: 3px solid #ffffff;
   border-radius: 30px;
   padding: 10px 15px;
   margin-right: 9px;
@@ -3888,6 +3950,14 @@ button:focus:not(:focus-visible) {
   border-radius: 20px;
 }
 
+.owl-carousel1 .slide-card {
+  margin-right: 14px;
+}
+
+.owl-carousel2 .slide-card {
+  margin-right: 23px;
+}
+
 .slider .slide-card {
   position: relative;
   margin-bottom: 27px;
@@ -3897,6 +3967,7 @@ button:focus:not(:focus-visible) {
   width: 100%;
 }
 .slider .slide-card .slider-data {
+  background-color: #ffffff;
   padding: 27px 15px 47px 15px;
   height: 246px;
 }
@@ -4139,6 +4210,62 @@ button:focus:not(:focus-visible) {
 .form-list.expanded {
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
+}
+
+@media (max-width: 1440px) {
+  .all-event-form .form-list {
+    margin: 0 53px 0 81px;
+  }
+}
+
+.all-event .grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 24px;
+}
+@media (max-width: 1440px) {
+  .all-event .grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media (max-width: 768px) {
+  .all-event .grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 575px) {
+  .all-event .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+.all-event .grid .slide-card {
+  margin-bottom: 58px;
+}
+@media (max-width: 1024px) {
+  .all-event .grid .slide-card {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 768px) {
+  .all-event .grid .slide-card {
+    margin-bottom: 20px;
+  }
+}
+@media (max-width: 575px) {
+  .all-event .grid .slide-card {
+    margin-bottom: 0px;
+  }
+}
+.all-event .grid .slide-card .slider-data {
+  height: 258px;
+}
+.all-event .table-pagination {
+  padding-bottom: 78px;
+}
+@media (max-width: 575px) {
+  .all-event .table-pagination {
+    padding-bottom: 40px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
