--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -516,6 +516,52 @@ header {
     }
   }
 }
+.rightside-title {
+  @media (max-width: #{$med}) {
+    &.quotation-title {
+      flex-direction: column;
+    }
+  }
+  @media (max-width: #{$sm}) {
+    display: flex;
+  }
+
+  h2 {
+    font-size: 30px;
+    line-height: 40px;
+    font-weight: 600;
+    color: #444444;
+    position: relative;
+    padding-left: 20px;
+    margin-bottom: 13px;
+    @media (max-width: #{$lg}) {
+      font-size: 24px;
+      line-height: 28px;
+    }
+    @media (max-width: #{$med}) {
+      font-size: 24px;
+    }
+    @media (max-width: #{$sm}) {
+      font-size: 18px;
+      line-height: 24px;
+      margin-bottom: 34px;
+    }
+
+    &::after {
+      position: absolute;
+      top: 7px;
+      left: 0;
+      background-color: $green-color;
+      content: "";
+      width: 12px;
+      height: 25px;
+      @media (max-width: #{$med}) {
+        top: 4px;
+        height: 17px;
+      }
+    }
+  }
+}
 .right-sidebar {
   width: 82.4%;
   @media (max-width: 1699px) {
@@ -3142,11 +3188,17 @@ p{
 .register-list{
   position: relative;
   img{
+    clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 50% 75%, 47% 84%, 44% 75%, 0% 75%);
     width: 100%;
+    height: 100%;
+    max-height: 550px;
     object-fit: cover;
-    margin-bottom: 35px;
+    @media (max-width: #{$med}) {
+      clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 52% 75%, 47% 86%, 42% 75%, 0% 75%);
+    }
     @media (max-width: #{$sm}) {
-      margin-bottom: 10px;
+      clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 55% 75%, 48% 87%, 42% 75%, 0% 75%);
+      min-height: 186px;
     }
   }
   h1{
@@ -3182,7 +3234,7 @@ p{
     border-radius: 10px;
     transition: border-radius 0.5s ease;
     @media (max-width: #{$xlll}) {
-      margin:0 19px 0 66px;
+      margin:0 19px 0 81px;
        }
     @media (max-width: #{$med}) {
       margin:0 19px 0 19px;
@@ -3193,8 +3245,9 @@ p{
     .form-list-data{
       
       input{
-        padding-top: 11px;
+        padding-top: 13px;
         padding-bottom: 12px !important; 
+        color: #9A9A9A;
         @media (max-width: #{$sm}) {
           padding-top: 9px;
           padding-bottom: 9px !important;
@@ -3289,7 +3342,7 @@ p{
       }
         .btn1{
             color: $white-color;
-            border: 2px solid $white-color;
+            border: 3px solid $white-color;
             border-radius: 30px;
             padding: 10px 15px;
             margin-right: 9px;
@@ -3518,17 +3571,25 @@ p{
   //  }
   }
 }
+.owl-carousel1 .slide-card{
+  margin-right: 14px;
+}
+.owl-carousel2 .slide-card{
+  margin-right: 23px;
+}
 .slider{
   .slide-card{
     // width: 276px;
     position: relative;
     margin-bottom: 27px;
     box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.25);
+    
    
    .top-img{
     width: 100%;
    }
     .slider-data{
+      background-color: $white-color;
       padding: 27px 15px 47px 15px;
       height: 246px;
     }
@@ -3768,3 +3829,52 @@ $dot-bg-color: transparent;
  border-bottom-right-radius: 0;
 }
 // --register -list end--
+
+
+// --all event list -start
+.all-event-form{
+  .form-list{
+     @media (max-width: #{$xlll}) {
+       margin:0 53px 0 81px;
+        }
+   }
+}
+.all-event {
+  .grid{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 24px;
+    
+@media (max-width: #{$xlll}) {
+grid-template-columns: repeat(4, 1fr);
+}
+@media (max-width: #{$med}) {
+grid-template-columns: repeat(2, 1fr);
+}
+@media (max-width: #{$sm}) {
+grid-template-columns: repeat(1, 1fr);
+}
+.slide-card{
+  margin-bottom: 58px;
+  @media (max-width: #{$xl}) {
+    margin-bottom: 30px;
+    }
+  @media (max-width: #{$med}) {
+    margin-bottom: 20px;
+    }
+  @media (max-width: #{$sm}) {
+    margin-bottom: 0px;
+    }
+    .slider-data{
+      height: 258px;
+    }
+}
+}
+.table-pagination{
+  padding-bottom: 78px;
+  @media (max-width: #{$sm}) {
+    padding-bottom: 40px;
+     }
+}
+}
+// --all event list -end
