--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3496,8 +3496,12 @@ button:focus:not(:focus-visible) {
   clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 50% 75%, 47% 84%, 44% 75%, 0% 75%);
   width: 100%;
   height: 100%;
-  max-height: 550px;
   object-fit: cover;
+}
+@media (max-width: 1440px) {
+  .register-list img {
+    max-height: 550px;
+  }
 }
 @media (max-width: 768px) {
   .register-list img {
