--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3191,8 +3191,10 @@ p{
     clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 50% 75%, 47% 84%, 44% 75%, 0% 75%);
     width: 100%;
     height: 100%;
-    max-height: 550px;
     object-fit: cover;
+    @media (max-width: #{$xlll}) {
+      max-height: 550px;
+    }
     @media (max-width: #{$med}) {
       clip-path: polygon(0% 0%, 100% 0%, 100% 75%, 52% 75%, 47% 86%, 42% 75%, 0% 75%);
     }
