--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,9 +180,6 @@ header .header-data .header-right h4::before {
     padding: 7px 24px;
   }
 }
-.main .main-data .main-tab-box .main-left-data .main-border.fix {
-  border-color: #f6774e !important;
-}
 .main .main-data .main-tab-box .main-left-data .main-border:hover {
   cursor: pointer;
 }
@@ -308,6 +305,10 @@ header .header-data .header-right h4::before {
 }
 .main .main-data .modal .modal-body .modal-list li a {
   color: #444444;
+}
+
+.fix {
+  border-color: #f6774e !important;
 }
 
 .main_data {
@@ -3985,7 +3986,7 @@ button:focus:not(:focus-visible) {
 }
 .slider .slide-card ul li {
   font-size: 18px;
-  line-height: 24px;
+  line-height: 28px;
   font-weight: 400;
   color: #787878;
   margin-bottom: 4px;
@@ -4159,6 +4160,19 @@ button:focus:not(:focus-visible) {
   opacity: 0;
 }
 
+.owl-carousel2.owl-theme .owl-dots .owl-dot.active {
+  border-color: #31B762 !important;
+}
+.owl-carousel2.owl-theme .owl-dots .owl-dot.active span {
+  background-color: #31B762 !important;
+}
+.owl-carousel2.owl-theme .owl-dots .owl-dot.active span:active {
+  background-color: #31B762 !important;
+}
+.owl-carousel2.owl-theme .owl-dots .owl-dot.active span:hover {
+  background-color: #31B762 !important;
+}
+
 .owl-carousel2 .owl-dots.disabled {
   display: block;
 }
@@ -4224,7 +4238,7 @@ button:focus:not(:focus-visible) {
 
 .all-event .grid {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
   gap: 24px;
 }
 @media (max-width: 1440px) {
@@ -4269,6 +4283,619 @@ button:focus:not(:focus-visible) {
 @media (max-width: 575px) {
   .all-event .table-pagination {
     padding-bottom: 40px;
+  }
+}
+
+.event-detail .detail-title h2 {
+  margin-bottom: 9px;
+}
+.event-detail .detail-back {
+  margin-bottom: 21px;
+}
+.event-detail .event-detail-img {
+  margin-bottom: 41px;
+}
+@media (max-width: 768px) {
+  .event-detail .event-detail-img {
+    margin-bottom: 25px;
+  }
+}
+.event-detail .event-detail-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.event-detail .event-detail-data p {
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 400;
+  color: #787878;
+  letter-spacing: 2px;
+  margin-bottom: 21px;
+  padding-right: 43px;
+}
+@media (max-width: 575px) {
+  .event-detail .event-detail-data p {
+    font-size: 14px;
+  }
+}
+@media (max-width: 1440px) {
+  .event-detail .event-detail-data p {
+    padding-right: 39px;
+  }
+}
+@media (max-width: 575px) {
+  .event-detail .event-detail-data p {
+    padding-right: 0;
+  }
+}
+.event-detail .event-detail-data ul {
+  margin-bottom: 18px;
+}
+@media (max-width: 575px) {
+  .event-detail .event-detail-data ul {
+    margin-bottom: 25px;
+  }
+}
+.event-detail .event-detail-data ul li {
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 400;
+  color: #787878;
+  letter-spacing: 2px;
+  display: flex;
+}
+@media (max-width: 575px) {
+  .event-detail .event-detail-data ul li {
+    font-size: 14px;
+  }
+}
+.event-detail .event-detail-data .list-data h3 {
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 400;
+  color: #787878;
+  letter-spacing: 2px;
+  margin-bottom: 0;
+}
+@media (max-width: 575px) {
+  .event-detail .event-detail-data .list-data h3 {
+    font-size: 14px;
+  }
+}
+.event-detail .event-detail-data .list-data .custm-width {
+  width: 100%;
+  max-width: 300px;
+}
+@media (max-width: 768px) {
+  .event-detail .event-detail-data .list-data .custm-width1 {
+    width: 100%;
+    max-width: 330px;
+  }
+}
+.event-detail .event-detail-right .basic-info {
+  border-radius: 20px;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
+  padding: 0 16px 25px 29px;
+  text-align: center;
+  margin-bottom: 19px;
+}
+@media (max-width: 575px) {
+  .event-detail .event-detail-right .basic-info {
+    padding: 0 21px 50px 38px;
+    margin-bottom: 38px;
+  }
+}
+.event-detail .event-detail-right .basic-info .green-btn {
+  background-color: #31b762;
+  padding: 6px 28px;
+  margin-bottom: 26px;
+  border: none;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 3px;
+  border-radius: 0 0 10px 10px;
+}
+.event-detail .event-detail-right .basic-info .green-btn:focus {
+  border: none;
+}
+.event-detail .event-detail-right .basic-info .basic-list {
+  text-align: start;
+}
+.event-detail .event-detail-right .basic-info .basic-list li {
+  color: #787878;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: 400;
+  display: flex;
+  gap: 7px;
+  margin-bottom: 9px;
+  text-align: start;
+}
+.event-detail .event-detail-right .basic-info .basic-list li span {
+  width: 100%;
+  max-width: 200px;
+}
+.event-detail .event-detail-right .register-info {
+  border-radius: 20px;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
+  background-color: #F6774E;
+  text-align: center;
+  padding: 0 28px 29px 28px;
+  margin-bottom: 19px;
+}
+@media (max-width: 575px) {
+  .event-detail .event-detail-right .register-info {
+    padding: 0 21px 22px 38px;
+    margin-bottom: 38px;
+  }
+}
+.event-detail .event-detail-right .register-info .red-btn {
+  background-color: #BF3D13;
+  padding: 6px 28px;
+  margin-bottom: 26px;
+  border: none;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 3px;
+  border-radius: 0 0 10px 10px;
+}
+.event-detail .event-detail-right .register-info .red-btn:focus {
+  border: none;
+}
+.event-detail .event-detail-right .register-info .register-list {
+  text-align: start;
+}
+.event-detail .event-detail-right .register-info .register-list li {
+  margin-bottom: 18px;
+  color: #ffffff;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 500;
+}
+.event-detail .event-detail-right .register-info .next-btn {
+  color: #444444;
+  background-color: #FBEE6C;
+  padding: 8px 61px 8px 62px;
+  border-radius: 20px;
+  font-size: 20px;
+  line-height: 28px;
+  font-weight: 700;
+  letter-spacing: 5px;
+}
+@media (max-width: 1440px) {
+  .event-detail .event-detail-right .register-info .next-btn {
+    padding: 8px 42px 8px 42px;
+  }
+}
+.event-detail .event-detail-right .contact-info {
+  border-radius: 20px;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
+  text-align: center;
+  padding: 0 28px 29px 28px;
+}
+@media (max-width: 575px) {
+  .event-detail .event-detail-right .contact-info {
+    padding: 0 21px 25px 38px;
+    margin-bottom: 38px;
+  }
+}
+.event-detail .event-detail-right .contact-info .blue-btn {
+  background-color: #008BD5;
+  padding: 6px 28px;
+  margin-bottom: 26px;
+  border: none;
+  color: #ffffff;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 3px;
+  border-radius: 0 0 10px 10px;
+  margin-bottom: 19px;
+}
+.event-detail .event-detail-right .contact-info .blue-btn:focus {
+  border: none;
+}
+.event-detail .event-detail-right .contact-info h3 {
+  text-align: start;
+  color: #008BD5;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 22px;
+  margin-bottom: 10px;
+}
+.event-detail .event-detail-right .contact-info h4 {
+  text-align: start;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 400;
+  color: #787878;
+  margin-bottom: 10px;
+}
+.event-detail .event-detail-right .contact-info h4 i {
+  color: #008BD5;
+  margin-right: 7px;
+}
+
+.similar-event {
+  padding-top: 41px;
+  padding-bottom: 32px;
+}
+.similar-event .similar-event-data {
+  padding: 27px 48px 32px 27px;
+  background-color: #FAFAFA;
+  border-radius: 20px;
+}
+@media (max-width: 575px) {
+  .similar-event .similar-event-data {
+    padding: 28px 21px 42px 18px;
+  }
+}
+.similar-event .similar-event-data .similar-title h3 {
+  color: #787878;
+  font-size: 16px;
+  line-height: 22px;
+  margin-bottom: 31px;
+  font-weight: 700;
+  letter-spacing: 3px;
+}
+.similar-event .similar-event-data .similar-event-list {
+  display: flex;
+  gap: 21px;
+}
+@media (max-width: 575px) {
+  .similar-event .similar-event-data .similar-event-list {
+    flex-direction: column;
+    gap: 0;
+  }
+}
+.similar-event .similar-event-data .similar-event-list ul:first-child {
+  width: 100%;
+  max-width: 300px;
+}
+.similar-event .similar-event-data .similar-event-list ul li {
+  display: flex;
+  gap: 26px;
+}
+.similar-event .similar-event-data .similar-event-list ul li h3 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #787878;
+  position: relative;
+}
+.similar-event .similar-event-data .similar-event-list ul li h3::after {
+  position: absolute;
+  top: 3px;
+  right: -10px;
+  width: 1px;
+  height: 16px;
+  background-color: #787878;
+  content: "";
+}
+.similar-event .similar-event-data .similar-event-list ul li h4 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #3F92BE;
+  position: relative;
+}
+.similar-event .similar-event-data .similar-event-list ul li .h4-width {
+  width: 100%;
+  max-width: 600px;
+}
+@media (max-width: 575px) {
+  .similar-event .similar-event-data .similar-event-list ul li .h4-width {
+    max-width: 237px;
+  }
+}
+
+@media (max-width: 575px) {
+  .key-word {
+    margin-bottom: 100px;
+  }
+}
+.key-word .key-word-list {
+  display: flex;
+  display: flex;
+  gap: 26px;
+}
+@media (max-width: 575px) {
+  .key-word .key-word-list {
+    padding-left: 20px;
+  }
+}
+.key-word .key-word-list h3 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #787878;
+  position: relative;
+  font-weight: 700;
+  letter-spacing: 3px;
+}
+.key-word .key-word-list h4 {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  color: #3F92BE;
+}
+.key-word .key-word-list .h4-width {
+  width: 100%;
+  max-width: 600px;
+}
+
+.parent-talk {
+  margin-bottom: 57px;
+}
+
+.online-register-title h3 {
+  font-size: 30px;
+  line-height: 41px;
+  letter-spacing: 5px;
+  font-weight: 600;
+  color: #F6774E;
+  margin-bottom: 29px;
+}
+.online-register-title ul {
+  display: flex;
+  gap: 21px;
+  align-items: center;
+  margin-bottom: 43px;
+}
+.online-register-title ul li a {
+  display: flex;
+  align-items: center;
+  gap: 9px;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 600;
+  color: #7C7C7C;
+  letter-spacing: 2px;
+}
+.online-register-title ul li a.active {
+  color: #F6774E;
+}
+@media (max-width: 575px) {
+  .online-register-title ul li a.active span {
+    max-width: 130px;
+  }
+}
+.online-register-title ul li a h4 {
+  padding-left: 4px;
+  width: 31px;
+  height: 31px;
+  background-color: #7C7C7C;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  color: #ffffff;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 700;
+  letter-spacing: 5px;
+}
+.online-register-title ul li a h4.active {
+  background-color: #F6774E;
+}
+
+.online-register {
+  width: 776px;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 29px;
+  padding: 54px 125px 58px 100px;
+}
+@media (max-width: 575px) {
+  .online-register {
+    width: 100%;
+    padding: 41px 11px 46px 11px;
+  }
+}
+.online-register h2 {
+  font-size: 18px;
+  line-height: 24px;
+  color: #F6774E;
+  font-weight: 700;
+  letter-spacing: 2px;
+  margin-bottom: 29px;
+}
+.online-register .reg-form {
+  margin-bottom: 32px;
+}
+.online-register .reg-form .form-div {
+  display: flex;
+  align-items: center;
+  margin-bottom: 17px;
+}
+@media (max-width: 575px) {
+  .online-register .reg-form .form-div {
+    flex-direction: column;
+    align-items: start;
+    gap: 7px;
+  }
+}
+.online-register .reg-form .form-div label {
+  width: 100%;
+  max-width: 200px;
+  font-size: 16px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  line-height: 21px;
+  color: #F6774E;
+}
+@media (max-width: 768px) {
+  .online-register .reg-form .form-div label {
+    max-width: 146px;
+  }
+}
+.online-register .reg-form .form-div .form-select {
+  border: 1px solid #555555;
+  padding: 7px 18px 10px 18px;
+  border-radius: 10px;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background: url("../images/Polygon 2.png") no-repeat right 10px center; /* Replace with your icon URL */
+  background-size: 14px;
+}
+@media (max-width: 575px) {
+  .online-register .reg-form .form-div .form-select {
+    padding: 14px 18px 14px 18px;
+  }
+}
+.online-register .reg-form .form-div .form-select:focus {
+  box-shadow: none;
+  outline: none;
+}
+.online-register .reg-form .form-div .form-select::placeholder {
+  color: #555555;
+}
+.online-register .reg-form .form-div input {
+  border: 1px solid #555555;
+  padding: 7px 18px 10px 18px;
+  border-radius: 10px;
+}
+@media (max-width: 575px) {
+  .online-register .reg-form .form-div input {
+    padding: 14px 18px 14px 18px;
+  }
+}
+.online-register .reg-form .form-div input:focus {
+  box-shadow: none;
+  outline: none;
+}
+.online-register .reg-form .form-div input::placeholder {
+  color: #BFBFBF;
+}
+.online-register .city-info h2 {
+  margin-bottom: 15px;
+  font-size: 18px;
+  color: #787878;
+  line-height: 24px;
+  font-weight: 700;
+  letter-spacing: 3px;
+}
+.online-register h3 {
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 500;
+  letter-spacing: 3px;
+  color: #787878;
+  margin-bottom: 21px;
+}
+.online-register .subscrib-form {
+  margin-bottom: 30px;
+}
+.online-register .subscrib-form .d-flex {
+  gap: 32px;
+}
+.online-register .subscrib-form .sub-data {
+  display: flex;
+  gap: 16px;
+  margin-bottom: 10px;
+}
+.online-register .subscrib-form .sub-data h3 {
+  margin-bottom: 0;
+}
+.online-register .single-line .sub-data {
+  display: flex;
+  gap: 32px;
+  margin-bottom: 28px;
+}
+.online-register .single-line h3 {
+  color: #F6774E;
+  font-size: 16px;
+  line-height: 21px;
+  font-weight: 500;
+}
+.online-register .single-line .sub-list {
+  list-style: decimal;
+  padding-left: 23px;
+  margin-bottom: 15px;
+}
+.online-register .single-line .sub-list li {
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 3px;
+  line-height: 22px;
+  color: #787878;
+}
+.online-register .single-line .sub-btn {
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 28px;
+  color: #444444;
+  padding: 17px 36px;
+  background-color: #FBEE6C;
+  border-radius: 20px;
+  letter-spacing: 6px;
+}
+
+.subscrib.custom-checkbox {
+  position: relative;
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+}
+@media (max-width: 575px) {
+  .subscrib.custom-checkbox {
+    width: 30px;
+    height: 30px;
+  }
+}
+.subscrib.custom-checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+.subscrib.custom-checkbox input:focus {
+  outline: none;
+  box-shadow: none;
+}
+.subscrib.custom-checkbox input:checked ~ .checkmark:after {
+  display: block;
+}
+.subscrib.custom-checkbox .checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 24px;
+  width: 24px;
+  background-color: #fff;
+  border: 1px solid #555555;
+  border-radius: 5px;
+}
+@media (max-width: 575px) {
+  .subscrib.custom-checkbox .checkmark {
+    width: 30px;
+    height: 30px;
+  }
+}
+.subscrib.custom-checkbox .checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+  left: 8px;
+  top: 2px;
+  width: 8px;
+  height: 16px;
+  border: solid #555555;
+  border-width: 0 4px 4px 0;
+  transform: rotate(45deg);
+}
+@media (max-width: 575px) {
+  .subscrib.custom-checkbox .checkmark:after {
+    left: 19px;
+    top: 2px;
+    width: 12px;
+    height: 29px;
   }
 }
 
