--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -44,6 +44,20 @@ img {
       padding: 15px 12px;
       border-radius: 20px;
 }
+@mixin green-red{
+  padding: 6px 28px;
+  margin-bottom: 26px;
+  border: none;
+  color: $white-color;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 3px;
+  border-radius: 0 0 10px 10px;
+  &:focus{
+    border: none;
+  }
+}
 @mixin btn-yel{
   background-color: #FBEE6C;
   padding: 14px 51px;
@@ -97,7 +111,16 @@ img {
   }
  
 }
-
+@mixin h3-list{
+  @include list();
+  color: #787878;
+  position: relative;
+}
+@mixin list{
+  font-size: 16px;
+  font-weight: 400;
+line-height: 22px;
+}
 @mixin table-width {
   width: 187px;
   @media (max-width: #{$xlll}) {
@@ -136,7 +159,17 @@ img {
     width: 100%;
   }
 }
-
+@mixin event-para{
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 400;
+  color: 
+#787878;
+letter-spacing: 2px;
+@media (max-width: #{$sm}) {
+ font-size: 14px;
+  }
+}
 @mixin register-btn{
   padding: 7px 30px;
   font-size: 16px;
@@ -295,10 +328,6 @@ header {
           @media (max-width: 991px) {
             padding: 7px 24px;
           }
-          &.fix{
-            border-color: #f6774e !important;
-          }
-
           &:hover {
             cursor: pointer;
           }
@@ -432,7 +461,9 @@ header {
     }
   }
 }
-
+.fix{
+  border-color: #f6774e !important;
+}
 // ---left-sidebar
 .main_data {
   height: 100%;
@@ -3606,7 +3637,7 @@ p{
     ul {
       li{
         font-size: 18px;
-        line-height: 24px;
+        line-height: 28px;
         font-weight: 400;
        color: #787878;
        margin-bottom: 4px;
@@ -3781,7 +3812,29 @@ $dot-bg-color: transparent;
           }
       }
 }
-
+.owl-carousel2{
+  &.owl-theme {
+    .owl-dots {
+      .owl-dot {
+        &.active{
+          border-color: 
+          #31B762!important;
+         span{  background-color: 
+          #31B762 !important;
+          &:active{
+            background-color: 
+            #31B762 !important;
+          }
+          &:hover{
+            background-color: 
+            #31B762!important;
+          }
+         }
+        }
+      }
+    }
+  }
+}
 .owl-carousel2{
  .owl-dots.disabled{
   display: block;
@@ -3844,7 +3897,7 @@ $dot-bg-color: transparent;
 .all-event {
   .grid{
     display: grid;
-    grid-template-columns: repeat(5, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 24px;
     
 @media (max-width: #{$xlll}) {
@@ -3880,3 +3933,553 @@ grid-template-columns: repeat(1, 1fr);
 }
 }
 // --all event list -end
+
+// ---dashboard event detail--start
+.event-detail{
+  .detail-title h2{
+    margin-bottom: 9px;
+  }
+  .detail-back{
+    margin-bottom: 21px;
+  }
+  .event-detail-img{
+    margin-bottom: 41px;
+    @media (max-width: #{$med}) {
+      margin-bottom: 25px;
+      }
+    img{
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  .event-detail-data{
+    p{
+    @include event-para();
+margin-bottom: 21px;
+padding-right: 43px;
+@media (max-width: #{$xlll}) {
+  padding-right: 39px;
+  }
+@media (max-width: #{$sm}) {
+  padding-right: 0;
+  }
+    }
+    ul{
+      margin-bottom: 18px;
+      @media (max-width: #{$sm}) {
+       margin-bottom: 25px;
+        }
+      li{
+        @include event-para();
+        display: flex;
+      }
+    }
+    .list-data{
+      // padding-left: 23px;
+      h3{
+        @include event-para();
+        margin-bottom: 0;
+      }
+      .custm-width{
+        width: 100%;
+        max-width: 300px;
+      }
+      .custm-width1{
+         @media (max-width: #{$med}) {
+          width: 100%;
+          max-width: 330px;
+          }
+      }
+    }
+  }
+  .event-detail-right{
+    .basic-info{
+      border-radius: 20px;
+      box-shadow:  0 0 6px 0 rgba(0, 0, 0, 0.25);
+      padding: 0 16px 25px 29px;
+      text-align: center;
+      margin-bottom: 19px;
+      @media (max-width: #{$sm}) {
+        padding:0 21px 50px 38px;
+        margin-bottom: 38px;
+        }
+      .green-btn{
+        background-color:  $green-color;
+       @include green-red();
+      }
+      .basic-list{
+        text-align: start;
+        li{
+          color: 
+          #787878;
+          font-size: 18px;
+          line-height: 25px;
+          font-weight: 400;
+          display: flex;
+          gap: 7px;
+          margin-bottom: 9px;
+          text-align: start;
+          span{
+            width: 100%;
+            max-width: 200px;
+          }
+        }
+      }
+    }
+    .register-info{
+      border-radius: 20px;
+      box-shadow:  0 0 6px 0 rgba(0, 0, 0, 0.25);
+      background-color: #F6774E;
+      text-align: center;
+      padding: 0 28px 29px 28px ;
+      margin-bottom: 19px;
+      @media (max-width: #{$sm}) {
+        padding:0 21px 22px 38px;
+        margin-bottom: 38px;
+        }
+      .red-btn{
+        background-color: 
+        #BF3D13;
+        @include green-red();
+      }
+      .register-list{
+        text-align: start;
+        li{
+          margin-bottom: 18px;
+          color: $white-color;
+          font-size: 16px;
+          line-height: 22px;
+          font-weight: 500;
+        }
+      }
+      .next-btn{
+        color: #444444;
+        background-color: 
+        #FBEE6C;
+        padding: 8px 61px 8px 62px;
+        border-radius: 20px;
+        font-size: 20px;
+        line-height: 28px;
+        font-weight: 700;
+        @include latter-space();
+        @media (max-width: #{$xlll}) {
+          padding: 8px 42px 8px 42px;
+          }
+      }
+    }
+    .contact-info{
+      border-radius: 20px;
+      box-shadow:  0 0 6px 0 rgba(0, 0, 0, 0.25);
+      text-align: center;
+      padding: 0 28px 29px 28px ;
+      @media (max-width: #{$sm}) {
+        padding:0 21px 25px 38px;
+        margin-bottom: 38px;
+        }
+      .blue-btn{
+        background-color: 
+        #008BD5;
+        @include green-red();
+        margin-bottom: 19px;
+      }
+      h3{
+        text-align: start;
+        color: 
+        #008BD5;
+        font-size: 16px;
+        font-weight: 700;
+        line-height: 22px;
+        margin-bottom: 10px;
+      }
+      h4{
+        text-align: start;
+        font-size: 16px;
+        line-height: 22px;
+        font-weight: 400;
+        color: #787878;
+        margin-bottom: 10px;
+        i{
+          color: #008BD5;
+          margin-right: 7px;
+        }
+      }
+    }
+  }
+}
+.similar-event{
+  padding-top: 41px;
+  padding-bottom: 32px;
+  .similar-event-data{
+    padding: 27px 48px 32px 27px;
+    background-color: 
+    #FAFAFA;
+    border-radius: 20px;
+    @media (max-width: #{$sm}) {
+      padding:28px 21px 42px 18px;
+      }
+    .similar-title {
+      h3{
+        color: #787878;
+        font-size: 16px;
+        line-height: 22px;
+        margin-bottom: 31px;
+        font-weight: 700;
+        letter-spacing: 3px;    
+}
+    }
+    .similar-event-list{
+      display: flex;
+      gap: 21px;
+      @media (max-width: #{$sm}) {
+        flex-direction: column;
+        gap: 0;
+        }
+      ul {
+      &:first-child{
+        width: 100%;
+        max-width: 300px;
+      }
+        li{
+          display: flex;
+          gap: 26px;
+          h3{
+          @include h3-list();
+          &::after{
+            position: absolute;
+            top: 3px;
+            right: -10px;
+            width: 1px;
+            height: 16px;
+            background-color: #787878;
+            content: "";
+          }
+          }
+          h4{
+            @include list();
+            color: #3F92BE;
+            position: relative;
+          }
+          .h4-width{
+            width: 100%;
+            max-width: 600px;
+            @media (max-width: #{$sm}) {
+              max-width: 237px;
+              }
+          }
+        }
+      }
+    }
+  }
+}
+.key-word{
+  @media (max-width: #{$sm}) {
+  margin-bottom: 100px;
+    }
+  .key-word-list{
+    display: flex;
+      display: flex;
+      gap: 26px;
+      @media (max-width: #{$sm}) {
+        padding-left: 20px;
+        }
+      h3{
+      @include h3-list();
+      font-weight: 700;
+letter-spacing: 3px    }
+      h4{
+        @include list();
+        color: #3F92BE;
+      }
+      .h4-width{
+        width: 100%;
+        max-width: 600px;
+      }
+  }
+}
+
+// ---dashboard event detail--end
+
+// ---event-detail-registration--start
+.parent-talk{
+  margin-bottom: 57px;
+}
+.online-register-title{
+  h3{
+    font-size: 30px;
+    line-height: 41px;
+    @include latter-space();
+    font-weight: 600;
+    color: #F6774E;
+    margin-bottom: 29px;
+  }
+  ul{
+    display: flex;
+    gap: 21px;
+    align-items: center;
+    margin-bottom: 43px;
+    li{
+     a{
+      display: flex;
+      align-items: center;
+      gap: 9px;
+      font-size: 16px;
+      line-height: 22px;
+      font-weight: 600;
+      color: 
+      #7C7C7C;
+    letter-spacing: 2px;
+      &.active{
+        color: 
+        #F6774E;
+        span{
+          @media (max-width: #{$sm}) {
+            max-width: 130px;
+            }
+        }
+      }
+      h4{
+        padding-left: 4px;
+        width: 31px;
+       height: 31px;
+      background-color: 
+      #7C7C7C;
+       display: flex;
+       justify-content: center;
+       align-items: center;
+       border-radius: 50%;
+       color: $white-color;
+       font-size: 18px;
+       line-height: 24px;
+       font-weight: 700;
+       @include latter-space();
+       &.active{
+        background-color: 
+        #F6774E;
+       }
+      }
+     }
+    }
+  }
+}
+.online-register{
+  width: 776px;
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 29px;
+  padding: 54px 125px 58px 100px;
+  @media (max-width: #{$sm}) {
+   width: 100%;
+   padding: 41px 11px 46px 11px;
+    }
+  h2{
+    font-size: 18px;
+    line-height: 24px;
+    color: 
+    #F6774E;
+    font-weight: 700;
+  letter-spacing: 2px;
+  margin-bottom: 29px;
+  }
+  .reg-form{
+    margin-bottom: 32px;
+    .form-div{
+      display: flex;
+      align-items: center;
+      margin-bottom: 17px;
+      @media (max-width: #{$sm}) {
+       flex-direction: column;
+       align-items: start;
+       gap: 7px;
+        }
+      label{
+        width: 100%;
+        max-width: 200px;
+        font-size: 16px;
+        font-weight: 700;
+        letter-spacing: 2px;
+       line-height: 21px;
+       color: 
+       #F6774E;
+       @media (max-width: #{$med}) {
+     max-width: 146px;
+        }
+
+      }
+      .form-select{
+        border: 1px solid #555555;
+        padding: 7px 18px 10px 18px;
+        border-radius: 10px;
+        @media (max-width: #{$sm}) {
+        padding: 14px 18px 14px 18px;
+           }
+        &:focus{
+          box-shadow: none;
+          outline: none;
+        }
+
+        appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    background: url('../images/Polygon\ 2.png') no-repeat right 10px center; /* Replace with your icon URL */
+    background-size: 14px;
+
+    &::placeholder{
+      color: 
+      #555555;
+    }
+      }
+      input{
+        border: 1px solid #555555;
+        padding: 7px 18px 10px 18px;
+        border-radius: 10px;
+        @media (max-width: #{$sm}) {
+          padding: 14px 18px 14px 18px;
+             }
+        &:focus{
+          box-shadow: none;
+          outline: none;
+        }
+        &::placeholder{
+          color: 
+          #BFBFBF;
+        }
+      }
+    }
+  }
+  .city-info{
+    h2{
+      margin-bottom: 15px;
+      font-size: 18px;
+      color: 
+      #787878;
+      line-height: 24px;
+
+font-weight: 700;
+letter-spacing: 3px;    }
+  }
+  h3{
+    font-size: 16px;
+    line-height: 21px;
+    font-weight: 500;
+    letter-spacing: 3px;
+    color: 
+    #787878;
+    margin-bottom: 21px;
+  }
+  .subscrib-form{
+    margin-bottom: 30px;
+    .d-flex{
+      gap: 32px;
+    }
+    .sub-data{
+      display: flex;
+      gap: 16px;
+      margin-bottom: 10px;
+      h3{
+        margin-bottom: 0;
+      }
+      
+    }
+  }
+  .single-line{
+    .sub-data{
+      display: flex;
+      gap: 32px;
+      margin-bottom: 28px;
+    }
+    h3{
+      color: 
+      #F6774E;
+      font-size: 16px;
+      line-height: 21px;
+      font-weight: 500;
+    }
+    .sub-list{
+      list-style: decimal;
+      padding-left: 23px;
+      margin-bottom: 15px;
+      li{
+    font-size: 16px;
+    font-weight: 500;
+    letter-spacing: 3px;
+    line-height: 22px;
+color: #787878;     
+ }
+}
+.sub-btn{
+ font-size: 20px;
+ font-weight: 700;
+ line-height: 28px;
+ color: 
+ #444444;
+ padding: 17px 36px;
+ background-color: #FBEE6C;
+ border-radius:20px;
+ letter-spacing: 6px;
+}
+  }
+}
+.subscrib{
+  &.custom-checkbox {
+    position: relative;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    @media (max-width: #{$sm}) {
+      width: 30px;
+      height: 30px;
+    }
+    input {
+      position: absolute;
+      opacity: 0;
+      cursor: pointer;
+      height: 0;
+      width: 0;
+      &:focus {
+        outline: none;
+        box-shadow: none;
+      }
+      &:checked ~ .checkmark:after {
+        display: block;
+      }
+    }
+
+    .checkmark {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 24px;
+      width: 24px;
+      background-color: #fff;
+      border: 1px solid 
+      #555555;
+      border-radius: 5px;
+      @media (max-width: #{$sm}) {
+        width: 30px;
+        height: 30px;
+      }
+
+      &:after {
+        content: "";
+        position: absolute;
+        display: none;
+        left: 8px;
+        top: 2px;
+        width: 8px;
+        height: 16px;
+        border: solid 
+        #555555;
+        border-width: 0 4px 4px 0;
+        transform: rotate(45deg);
+
+        @media (max-width: #{$sm}) {
+          left: 19px;
+          top: 2px;
+          width: 12px;
+          height: 29px;
+        }
+      }
+    }
+  }
+}
+// ---event-detail-registration--end
