--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4267,9 +4267,11 @@ letter-spacing: 3px    }
   box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
   border-radius: 29px;
   padding: 54px 125px 58px 100px;
+  margin-bottom: 199px;
   @media (max-width: #{$sm}) {
    width: 100%;
    padding: 41px 11px 46px 11px;
+   margin-bottom: 92px;
     }
   h2{
     font-size: 18px;
@@ -4353,9 +4355,12 @@ letter-spacing: 3px    }
       color: 
       #787878;
       line-height: 24px;
-
 font-weight: 700;
-letter-spacing: 3px;    }
+letter-spacing: 3px;   
+@media (max-width: #{$sm}) {
+margin-bottom: 6px;
+}
+ }
   }
   h3{
     font-size: 16px;
@@ -4365,9 +4370,16 @@ letter-spacing: 3px;    }
     color: 
     #787878;
     margin-bottom: 21px;
+    @media (max-width: #{$sm}) {
+      margin-bottom: 28px;
+    }
   }
   .subscrib-form{
     margin-bottom: 30px;
+    @media (max-width: #{$sm}) {
+      margin-bottom: 7px;
+      margin-left: 14px;
+    }
     .d-flex{
       gap: 32px;
     }
@@ -4375,6 +4387,9 @@ letter-spacing: 3px;    }
       display: flex;
       gap: 16px;
       margin-bottom: 10px;
+      @media (max-width: #{$sm}) {
+        margin-bottom: 35px;
+      }
       h3{
         margin-bottom: 0;
       }
@@ -4386,6 +4401,10 @@ letter-spacing: 3px;    }
       display: flex;
       gap: 32px;
       margin-bottom: 28px;
+      @media (max-width: #{$sm}) {
+        margin-bottom: 5px;
+        gap: 14px;
+      }
     }
     h3{
       color: 
@@ -4393,6 +4412,7 @@ letter-spacing: 3px;    }
       font-size: 16px;
       line-height: 21px;
       font-weight: 500;
+      width: 100%;
     }
     .sub-list{
       list-style: decimal;
@@ -4473,10 +4493,10 @@ color: #787878;
         transform: rotate(45deg);
 
         @media (max-width: #{$sm}) {
-          left: 19px;
-          top: 2px;
-          width: 12px;
-          height: 29px;
+          left: 9px;
+          top: 1px;
+          width: 10px;
+          height: 21px;
         }
       }
     }
