--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4235,6 +4235,11 @@ button:focus:not(:focus-visible) {
     margin: 0 53px 0 81px;
   }
 }
+@media (max-width: 575px) {
+  .all-event-form .form-list {
+    margin: 0;
+  }
+}
 
 .all-event .grid {
   display: grid;
@@ -4661,7 +4666,7 @@ button:focus:not(:focus-visible) {
   color: #F6774E;
 }
 @media (max-width: 575px) {
-  .online-register-title ul li a.active span {
+  .online-register-title ul li a .span-div {
     max-width: 130px;
   }
 }
@@ -4713,6 +4718,11 @@ button:focus:not(:focus-visible) {
   display: flex;
   align-items: center;
   margin-bottom: 17px;
+}
+@media (max-width: 575px) {
+  .online-register .reg-form .form-div.mb0 {
+    margin-bottom: 0;
+  }
 }
 @media (max-width: 575px) {
   .online-register .reg-form .form-div {
@@ -4927,6 +4937,70 @@ button:focus:not(:focus-visible) {
     width: 10px;
     height: 21px;
   }
+}
+
+.online-form-list {
+  margin-bottom: 67px;
+}
+.online-form-list li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+.online-form-list li h3 {
+  color: #F6774E;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  margin-bottom: 0;
+  width: 100%;
+  max-width: 200px;
+}
+.online-form-list li h4 {
+  color: #555555;
+  font-size: 16px;
+  line-height: 22px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  margin-bottom: 0;
+}
+
+.btn-grp {
+  display: flex;
+  justify-content: center;
+  gap: 29px;
+}
+@media (max-width: 575px) {
+  .btn-grp {
+    flex-direction: column;
+  }
+}
+.btn-grp .btn-grp1 {
+  padding: 17px 33px 16px 27px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 27px;
+  letter-spacing: 3px;
+  border-radius: 10px;
+  color: #444444;
+  border: 1px solid #000000 !important;
+}
+.btn-grp .btn-grp1:focus {
+  outline: none;
+}
+.btn-grp .btn-grp2 {
+  padding: 17px 33px 16px 27px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 27px;
+  letter-spacing: 3px;
+  border-radius: 10px;
+  color: #444444;
+  background-color: #FBEE6C !important;
+}
+.btn-grp .btn-grp2:focus {
+  outline: none;
 }
 
 /*# sourceMappingURL=style.css.map */
