--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2599,6 +2599,10 @@ footer .footer-data .footer-right li:last-child::after {
   color: #008BD5;
   border: 1px solid #008BD5;
 }
+.record-btn .btn.green-btn {
+  color: #31B762;
+  border: 1px solid #31B762;
+}
 @media (max-width: 768px) {
   .record-btn .btn {
     padding: 8px 28px;
@@ -4381,7 +4385,7 @@ button:focus:not(:focus-visible) {
 .event-detail .event-detail-right .basic-info {
   border-radius: 20px;
   box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
-  padding: 0 16px 25px 29px;
+  padding: 0 29px 25px 29px;
   text-align: center;
   margin-bottom: 19px;
 }
@@ -4634,6 +4638,11 @@ button:focus:not(:focus-visible) {
   max-width: 600px;
 }
 
+.wizard-steps .step .h4.active {
+  background-color: #F6774E;
+  color: #ffffff;
+}
+
 .parent-talk {
   margin-bottom: 57px;
 }
@@ -4694,13 +4703,16 @@ button:focus:not(:focus-visible) {
   box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.25);
   border-radius: 29px;
   padding: 54px 125px 58px 100px;
-  margin-bottom: 199px;
+  margin-bottom: 199px !important;
 }
 @media (max-width: 575px) {
   .online-register {
     width: 100%;
     padding: 41px 11px 46px 11px;
-    margin-bottom: 92px;
+    margin-bottom: 92px !important;
+  }
+  .online-register.mobile-register {
+    padding: 38px 18px 40px 18px;
   }
 }
 .online-register h2 {
@@ -4797,7 +4809,7 @@ button:focus:not(:focus-visible) {
     margin-bottom: 6px;
   }
 }
-.online-register h3 {
+.online-register:last-child, .online-register h3 {
   font-size: 16px;
   line-height: 21px;
   font-weight: 500;
@@ -4806,8 +4818,13 @@ button:focus:not(:focus-visible) {
   margin-bottom: 21px;
 }
 @media (max-width: 575px) {
-  .online-register h3 {
+  .online-register:last-child, .online-register h3 {
     margin-bottom: 28px;
+  }
+}
+@media (max-width: 575px) {
+  .online-register h3 {
+    margin-bottom: 5px;
   }
 }
 .online-register .subscrib-form {
@@ -4832,7 +4849,7 @@ button:focus:not(:focus-visible) {
     margin-bottom: 35px;
   }
 }
-.online-register .subscrib-form .sub-data h3 {
+.online-register .subscrib-form .sub-data:last-child {
   margin-bottom: 0;
 }
 .online-register .single-line .sub-data {
@@ -4846,12 +4863,17 @@ button:focus:not(:focus-visible) {
     gap: 14px;
   }
 }
-.online-register .single-line h3 {
+.online-register .single-line .check-lab {
   color: #F6774E;
   font-size: 16px;
   line-height: 21px;
   font-weight: 500;
   width: 100%;
+}
+@media (max-width: 575px) {
+  .online-register .single-line .check-lab {
+    margin-bottom: 33px;
+  }
 }
 .online-register .single-line .sub-list {
   list-style: decimal;
@@ -4942,10 +4964,22 @@ button:focus:not(:focus-visible) {
 .online-form-list {
   margin-bottom: 67px;
 }
+@media (max-width: 575px) {
+  .online-form-list {
+    margin-bottom: 59px;
+  }
+}
 .online-form-list li {
   display: flex;
   align-items: center;
   margin-bottom: 15px;
+}
+@media (max-width: 575px) {
+  .online-form-list li {
+    flex-direction: column;
+    align-items: start;
+    margin-bottom: 27px;
+  }
 }
 .online-form-list li h3 {
   color: #F6774E;
@@ -4970,10 +5004,12 @@ button:focus:not(:focus-visible) {
   display: flex;
   justify-content: center;
   gap: 29px;
+  margin: 0 auto;
 }
 @media (max-width: 575px) {
   .btn-grp {
     flex-direction: column;
+    width: max-content;
   }
 }
 .btn-grp .btn-grp1 {
@@ -4982,7 +5018,7 @@ button:focus:not(:focus-visible) {
   font-weight: 700;
   line-height: 27px;
   letter-spacing: 3px;
-  border-radius: 10px;
+  border-radius: 16px;
   color: #444444;
   border: 1px solid #000000 !important;
 }
@@ -4995,12 +5031,24 @@ button:focus:not(:focus-visible) {
   font-weight: 700;
   line-height: 27px;
   letter-spacing: 3px;
-  border-radius: 10px;
+  border-radius: 16px;
   color: #444444;
   background-color: #FBEE6C !important;
 }
 .btn-grp .btn-grp2:focus {
   outline: none;
+}
+
+.wizard-step {
+  display: none;
+}
+
+.wizard-step.active {
+  display: block;
+}
+
+.btn-prev {
+  margin: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
