--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3295,6 +3295,11 @@ p{
 }
 .register-list-form{
   margin-bottom: 87px;
+  .container{
+    @media (max-width: #{$sm}) {
+      padding: 0 20px !important;
+    }
+  }
   @media (max-width: #{$med}) {
     margin-bottom: 40px;
   }
@@ -3550,6 +3555,11 @@ p{
 
 .list-slider{
   padding-left: 85px;
+  .container-fluid{
+    @media (max-width: #{$sm}) {
+   padding: 0 20px !important;
+    }
+  }
   @media (max-width: #{$sm}) {
     padding-left: 0;
   }
@@ -3698,7 +3708,8 @@ p{
         margin-top: 35px;
         padding:0;
         padding-top: 30px;
-        
+        margin-right: 8px;
+        margin-left: 8px;
       }
   .left-btm-data{
     position: relative;
@@ -3936,6 +3947,11 @@ $dot-bg-color: transparent;
    }
 }
 .all-event {
+  .container{
+    @media (max-width: #{$sm}) {
+     padding: 0 20px;
+      }
+  }
   .grid{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -3977,6 +3993,11 @@ grid-template-columns: repeat(1, 1fr);
 
 // ---dashboard event detail--start
 .event-detail{
+  .container{
+    @media (max-width: #{$sm}) {
+      padding: 0 20px;
+      }
+  }
   .detail-title h2{
     margin-bottom: 9px;
   }
@@ -4151,6 +4172,11 @@ padding-right: 43px;
 .similar-event{
   padding-top: 41px;
   padding-bottom: 32px;
+  .container{
+    @media (max-width: #{$sm}) {
+     padding: 0 20px;
+      }
+  }
   .similar-event-data{
     padding: 27px 48px 32px 27px;
     background-color: 
@@ -4222,7 +4248,7 @@ padding-right: 43px;
       display: flex;
       gap: 26px;
       @media (max-width: #{$sm}) {
-        padding-left: 20px;
+        padding-left: 36px;
         }
       h3{
       @include h3-list();
@@ -4249,6 +4275,16 @@ letter-spacing: 3px    }
 
 .parent-talk{
   margin-bottom: 57px;
+  .container{
+    @media (max-width: #{$sm}) {
+     padding: 0 20px;
+      }
+  }
+}
+.event-detail-mobile{
+  @media (max-width: #{$sm}) {
+    padding: 0 8px;
+     }
 }
 .online-register-title{
   h3{
@@ -4587,7 +4623,7 @@ color: #787878;
   @media (max-width: #{$med}) {
     gap: 20px;
     }
-  @media (max-width: #{$med}) {
+  @media (max-width: #{$sm}) {
     padding:  84px 74px 61px 62px;
     gap: 33px;
     }
@@ -4600,11 +4636,12 @@ color: #787878;
       }
     @media (max-width: #{$sm}) {
       width: 207px;
-      padding: 8px 10px;
+      padding: 17px 32px 16px 33px;
       }
   }
  }
 }
+
 .subscrib{
   &.custom-checkbox {
     position: relative;
@@ -4723,8 +4760,6 @@ color: #787878;
 
   }
 }
-// ---event-detail-registration--end
-
 
 .wizard-step {
     display: none;
@@ -4736,3 +4771,130 @@ color: #787878;
 .btn-prev{
   margin: 0;
 }
+// ---event-detail-registration--end
+
+
+// ----edmall--start
+.edmall{
+  .owl-carousel{
+    .item{
+      &.active{
+        svg path{
+          fill: 
+          #F6774E;
+        }
+        .book-data h3{
+          color: $white-color;
+        }
+      }
+    }
+  }
+}
+.edmall-slider{
+  padding-bottom: 63px;
+  padding-top: 33px;
+}
+.book-svg{
+  position: relative;
+  padding-right: 24px;
+  .book-data{
+    position: absolute;
+    top: 45px;
+    left: 42px;
+    h3{
+      text-align: center;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 22px;
+      color: 
+      #585858;
+      width: 100%;
+      max-width: 100px;
+    }
+  }
+}
+.edmall-dropdown{
+  background-color: #F6774E;
+  border-radius: 10px;
+  padding: 14px 32px 14px 20px;
+  margin: 0 100px 0 160px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  .edmall-checkmark{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    label{
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 27px;
+      letter-spacing: 5px;
+      color: $white-color;
+    }
+  }
+  .custom-checkbox {
+    position: relative;
+    display: inline-block;
+    height: 29px;
+    width: 26px;
+    @media (max-width: #{$sm}) {
+      width: 50px;
+      height: 50px;
+    }
+    input {
+      position: absolute;
+      opacity: 0;
+      cursor: pointer;
+      height: 0;
+      width: 0;
+      &:focus {
+        outline: none;
+        box-shadow: none;
+      }
+      &:checked ~ .checkmark:after {
+        display: block;
+      }
+    }
+
+    .checkmark {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 29px;
+      width: 26px;
+      background-color: #fff;
+      border-radius: 5px;
+
+      &:after {
+        content: "";
+        position: absolute;
+        display: none;
+        left: 9px;
+        top: 2px;
+        width: 9px;
+        height: 20px;
+        border: solid #31B762;
+        border-width: 0 3px 3px 0;
+        transform: rotate(45deg);
+      }
+    }
+
+  }
+  .open-btn{
+border:  3px solid $white-color;
+padding: 10px 15px;
+border-radius: 30px;
+color: $white-color;
+font-size: 20px;
+line-height: 27px;
+font-kerning: 700;
+letter-spacing: 4px;
+  }
+}
+.edmall-dropdown-data{
+  background-color: #FFFEEF;
+}
+
+// ----edmall--end
+
