changes edmall page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,12 +180,6 @@ header .header-data .header-right h4::before {
     padding: 7px 24px;
   }
 }
-.main .main-data .main-tab-box .main-left-data .main-border:hover {
-  cursor: pointer;
-}
-.main .main-data .main-tab-box .main-left-data .main-border:focus {
-  border-color: #f6774e !important;
-}
 .main .main-data .main-tab-box .main-left-data .main-border h3 {
   font-size: 20px;
   line-height: 28px;
@@ -939,10 +933,6 @@ footer .footer-data .footer-right li::after {
 }
 footer .footer-data .footer-right li:last-child::after {
   width: 0;
-}
-
-.main-left-data:focus .main-border {
-  border-color: #f6774e !important;
 }
 
 @media (max-width: 768px) {
@@ -5297,37 +5287,122 @@ button:focus:not(:focus-visible) {
   }
 }
 
-.book-svg {
+.nav-pills .nav-link.active h3, .nav-pills .show > .nav-link h3 {
+  color: white !important;
+}
+.nav-pills .nav-link.active svg path, .nav-pills .show > .nav-link svg path {
+  fill: #F6774E;
+}
+
+@media (max-width: 575px) {
+  svg {
+    width: 150px;
+  }
+}
+@media (max-width: 375px) {
+  svg {
+    width: 140px;
+  }
+}
+
+.drop-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1em;
+}
+
+.btn-line {
+  display: flex;
+  gap: 0.5em;
+}
+
+.btn-line .btn {
+  display: none;
+}
+
+.btn-line label {
+  display: inline-block;
+  width: 104px;
+  height: 44px;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 24px;
+  letter-spacing: 2px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #F6774E;
+  border: 1px solid #F6774E;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+@media (max-width: 575px) {
+  .btn-line label {
+    font-size: 16px;
+  }
+}
+@media (max-width: 375px) {
+  .btn-line label {
+    width: 88px;
+  }
+}
+
+.btn-line.increse-btn {
+  width: 100%;
+  flex-wrap: wrap;
+  max-width: 800px;
+  margin-bottom: 0;
+}
+.btn-line.increse-btn label {
+  width: 151px;
+}
+@media (max-width: 575px) {
+  .btn-line.increse-btn label {
+    width: 139px;
+  }
+}
+
+.btn-line input[type=radio] {
+  display: none;
+}
+
+.btn-line input[type=radio]:checked + label {
+  background-color: #F6774E;
+  color: white;
+}
+
+.nav-item.item .nav-link .book-svg {
   position: relative;
 }
-.book-svg img {
+.nav-item.item .nav-link .book-svg img {
   width: 100%;
   max-width: 600px;
 }
-.book-svg .book-data {
+.nav-item.item .nav-link .book-svg .book-data {
   position: absolute;
-  top: 69px;
-  left: 78px;
+  top: 40px;
+  left: 36px;
 }
 @media (max-width: 1440px) {
-  .book-svg .book-data {
+  .nav-item.item .nav-link .book-svg .book-data {
     top: 45px;
     left: 35px;
   }
 }
 @media (max-width: 375px) {
-  .book-svg .book-data {
-    top: 33px;
+  .nav-item.item .nav-link .book-svg .book-data {
+    top: 39px;
     left: 27px;
   }
 }
 @media (max-width: 320px) {
-  .book-svg .book-data {
-    top: 22px;
-    left: 10px;
+  .nav-item.item .nav-link .book-svg .book-data {
+    top: 40px;
+    left: 18px;
   }
 }
-.book-svg .book-data h3 {
+.nav-item.item .nav-link .book-svg .book-data h3 {
   text-align: center;
   font-size: 16px;
   font-weight: 700;
@@ -5344,6 +5419,10 @@ button:focus:not(:focus-visible) {
 .rounded-bottom {
   border-bottom-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+  box-shadow: none;
 }
 
 .edmall-dropdown {
