--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -354,6 +354,11 @@ header {
             margin-bottom: 0;
             text-shadow: -2px -2px 0 white, 2px -2px 0 white, -2px 2px 0 white,
               2px 2px 0 white;
+              &.active{
+                color: 
+                #F6774E;
+                text-shadow: -2px -2px 0 white, 2px -2px 0 white, -2px 2px 0 white,
+              }
             @media (max-width: 1024px) {
               font-size: 18px;
               line-height: 26px;
@@ -4829,7 +4834,7 @@ color: #787878;
   padding-bottom: 63px;
   padding-top: 33px;
   @media (max-width: #{$sm}) {
-    padding-bottom: 25px;
+    padding-bottom: 0;
 }
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link{
