--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -368,9 +368,9 @@ header {
               line-height: 22px;
             }
           }
-          .text-orange {
-            color: #f6774e;
-          }
+          // .text-orange {
+          //   color: #f6774e;
+          // }
         }
       }
     }
